--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Yugi</title>
     <link rel="stylesheet" href="./bootstrap-5.3.7-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./fontawesome-free-7.0.0-web/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
     <script src="bootstrap-5.3.7-dist/js/bootstrap.bundle.min.js"></script>
     <script src="jquery-3.7.1.min.js"></script>
     <style>
