--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Fire King</h5>
                         <p class="card-text anbot">The Fire King deck, a FIRE-attributed archetype in Yu-Gi-Oh!, revolves around destroying its own monsters to trigger powerful</p>
-                        <a href="#" class="btn btn-primary">Xem thêm</a>
+                        <a href="./yugi_sanpham.html" class="btn btn-primary">Xem thêm</a>
                     </div>
                 </div>
             </div>
