--- a/yugi_dangky.html
+++ b/yugi_dangky.html
@@ -10,6 +10,9 @@
         body {
             background-color: #ffeeba;
         }
+        .dropdown-menu{
+            border: none;
+        }
         .dangky {
             max-width: 500px;
             margin: 100px auto;
